--- a/assets/package.json
+++ b/assets/package.json
@@ -15,11 +15,13 @@
     "popper.js": "^1.15.0",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-bs-notifier": "^5.0.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
-    "sass-loader": "^8.0.0"
+    "sass-loader": "^8.0.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
